--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,22 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.2.1'
+    implementation "androidx.compose.material:material-icons-extended:1.2.1"
+
+    // Navigation for Compose
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+
+    // DataStore for onboarding persistence
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    
+    // Network dependencies
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
